<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity"
        android:orientation="vertical">

    <Space
            android:layout_width="match_parent"
            android:layout_height="6dp"/>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

            <Button
                    android:text="@string/button_medium_text"
                    android:layout_width="45pt"
                    android:layout_height="45pt"
                    android:id="@+id/medium_button"
                    android:background="@drawable/btn_rounded_effect_16dp" android:layout_centerInParent="true"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|end" android:layout_margin="5dp">

            <Button
                    android:text="@string/button_high_text"
                    android:layout_width="45pt"
                    android:layout_height="45pt"
                    android:id="@+id/high_button"
                    android:background="@drawable/btn_rounded_effect_16dp" android:layout_alignParentLeft="true"/>

            <Button
                    android:id="@+id/light_button"
                    android:text="@string/button_light_text"
                    android:layout_width="45pt"
                    android:layout_height="45pt"
                    android:background="@drawable/btn_rounded_effect_16dp" android:layout_centerInParent="true"/>
            <Button
                    android:text="@string/button_low_text"
                    android:layout_width="45pt"
                    android:layout_height="45pt"
                    android:id="@+id/low_button"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/btn_rounded_effect_16dp" android:layout_alignParentRight="true"
                    android:layout_marginEnd="5dp"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

            <Button
                    android:id="@+id/off_button"
                    android:text="@string/button_off_text"
                    android:layout_width="45pt"
                    android:layout_height="45pt"
                    android:background="@drawable/btn_rounded_effect_16dp" android:layout_centerInParent="true"/>
        </RelativeLayout>

    </TableLayout>

    <Button
            android:text="@string/button_timeout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/timeout_button"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_rounded_effect_16dp"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

        <Spinner
                android:id="@+id/controller_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
        />

        <ImageButton
                android:id="@+id/add_controller"
                android:layout_width="145dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_add_black_24dp"
                android:layout_weight="1"
                android:background="@drawable/btn_rounded_effect_48dp"
                android:contentDescription="@string/add_controller_button_desc"/>
    </LinearLayout>

</LinearLayout>